--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.left-column {
+  flex: 1;
+  width: 20%; /* Adjust as needed */
+  background-color: #f0f0f0; /* Example background color */
+  height: 80%
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remaining-space {
+  flex: 4;
+  width: 80%; /* Adjust as needed */
+  background-color: #e0e0e0; /* Example background color */
+  height: 80%
 }
